# polynomials

./: Cargo.toml
src/: cs.rs  domains.rs  lib.rs  multicore.rs  polynomials.rs
src/fft/: fft.rs  lde.rs  mod.rs  prefetch_fft.rs  prefetch_lde.rs
src/fft/cooley_tukey_ntt/: mod.rs  partial_reduction.rs
src/fft/radix_4/: mod.rs
src/fft/with_precomputation/: fft.rs  mod.rs
src/transparent_engine/: impl_macro.rs  mod.rs  proth.rs  proth_engine.rs
